addition/multiplication almost finished, thesis writing started

--- a/assembler-simulator/index.html
+++ b/assembler-simulator/index.html
@@ -72,10 +72,10 @@
                                     <th style="text-align:center">A</th>
                                     <th style="text-align:center">B</th>
                                     <th style="text-align:center">C</th>
+                                    <th style="text-align:center">IX</th>
                                     <th style="text-align:center">M</th>
                                     <th style="text-align:center">PC</th>
                                     <th style="text-align:center">SP</th>
-                                    <th style="text-align:center">-</th>
                                     <th style="text-align:center">Carry</th>
                                     <th style="text-align:center">-</th>
                                 </tr>
@@ -85,26 +85,125 @@
                                     <td><div style="margin:auto;" ng-class="displayA && 'marker marker-a'"><small>{{ cpu.gpr[0] | number:displayHex }}</small></div></td>
                                     <td><div style="margin:auto;" ng-class="displayB && 'marker marker-b'"><small>{{ cpu.gpr[1] | number:displayHex }}</small></div></td>
                                     <td><div style="margin:auto;" ng-class="displayC && 'marker marker-c'"><small>{{ cpu.gpr[2] | number:displayHex }}</small></div></td>
+                                    <td><div style="margin:auto;"><small>{{ cpu.gpr[4] | number:displayHex }}</small></div></td>
                                     <td><div style="margin:auto;" ng-class="displayM && 'marker marker-m'"><small>{{ cpu.gpr[3] | number:displayHex }}</small></div></td>
                                     <td><div style="margin:auto;" class="marker marker-pc"><small>{{ cpu.pc | number:displayHex }}</small></div></td>
                                     <td><div style="margin:auto;" class="marker marker-sp"><small>{{ cpu.sp | number:displayHex }}</small></div></td>
-                                    <td><small>{{ cpu.zero | flag }}</small></td>
                                     <td><small>{{ cpu.carry | flag }}</small></td>
                                     <td><small>{{ cpu.fault | flag }}</small></td>
                                 </tr>
                             </tbody>
                         </table>
-                        <p class="text-muted">RAM</p>
+                        <p class="text-muted">Memory</p>
                         <div style="width:29em;" class="source-code">
                             <div class="memory-block"
-                                 ng-repeat="m in memory.data track by $index"
+                                 ng-repeat="m in memory.data | block: 0 track by $index"
                                  ng-class="getMemoryCellCss($index)">
-                                 <div ng-class="getMemoryInnerCellCss($index)" ng-switch="isInstruction($index)">
-                                     <small ng-switch-default>{{ m | number:displayHex }}</small>
-                                     <a ng-switch-when="true" ng-click="jumpToLine($index)">
-                                         <small>{{ m | number:displayHex }}</small>
-                                     </a>
-                                 </div>
+                                <div ng-class="getMemoryInnerCellCss($index)" ng-switch="isInstruction($index)">
+                                    <small ng-switch-default>{{ m | number:displayHex }}</small>
+                                    <a ng-switch-when="true" ng-click="jumpToLine($index)">
+                                        <small>{{ m | number:displayHex }}</small>
+                                    </a>
+                                </div>
+                            </div>
+                            <p></p>
+                            <div class="memory-block"
+                                 ng-repeat="m in memory.data | block: 1 track by $index"
+                                 ng-class="getMemoryCellCss($index+256*1)">
+                                <div ng-class="getMemoryInnerCellCss($index+256*1)" ng-switch="isInstruction($index+256*1)">
+                                    <small ng-switch-default>{{ m | number:displayHex }}</small>
+                                    <a ng-switch-when="true" ng-click="jumpToLine($index+256*1)">
+                                        <small>{{ m | number:displayHex }}</small>
+                                    </a>
+                                </div>
+                            </div>
+                            <p></p>
+                            <div class="memory-block"
+                                 ng-repeat="m in memory.data | block: 2 track by $index"
+                                 ng-class="getMemoryCellCss($index+256*2)">
+                                <div ng-class="getMemoryInnerCellCss($index+256*2)" ng-switch="isInstruction($index+256*2)">
+                                    <small ng-switch-default>{{ m | number:displayHex }}</small>
+                                    <a ng-switch-when="true" ng-click="jumpToLine($index+256*2)">
+                                        <small>{{ m | number:displayHex }}</small>
+                                    </a>
+                                </div>
+                            </div>
+                            <p></p>
+                            <div class="memory-block"
+                                 ng-repeat="m in memory.data | block: 3 track by $index"
+                                 ng-class="getMemoryCellCss($index+256*3)">
+                                <div ng-class="getMemoryInnerCellCss($index+256*3)" ng-switch="isInstruction($index+256*3)">
+                                    <small ng-switch-default>{{ m | number:displayHex }}</small>
+                                    <a ng-switch-when="true" ng-click="jumpToLine($index+256*3)">
+                                        <small>{{ m | number:displayHex }}</small>
+                                    </a>
+                                </div>
+                            </div>
+                            <p></p>
+                            <div class="memory-block"
+                                 ng-repeat="m in memory.data | block: 4 track by $index"
+                                 ng-class="getMemoryCellCss($index+256*4)">
+                                <div ng-class="getMemoryInnerCellCss($index+256*4)" ng-switch="isInstruction($index+256*4)">
+                                    <small ng-switch-default>{{ m | number:displayHex }}</small>
+                                    <a ng-switch-when="true" ng-click="jumpToLine($index+256*4)">
+                                        <small>{{ m | number:displayHex }}</small>
+                                    </a>
+                                </div>
+                            </div>
+                            <p></p>
+                            <div class="memory-block"
+                                 ng-repeat="m in memory.data | block: 5 track by $index"
+                                 ng-class="getMemoryCellCss($index+256*5)">
+                                <div ng-class="getMemoryInnerCellCss($index+256*5)" ng-switch="isInstruction($index+256*5)">
+                                    <small ng-switch-default>{{ m | number:displayHex }}</small>
+                                    <a ng-switch-when="true" ng-click="jumpToLine($index+256*5)">
+                                        <small>{{ m | number:displayHex }}</small>
+                                    </a>
+                                </div>
+                            </div>
+                            <p></p>
+                            <div class="memory-block"
+                                 ng-repeat="m in memory.data | block: 6 track by $index"
+                                 ng-class="getMemoryCellCss($index+256*6)">
+                                <div ng-class="getMemoryInnerCellCss($index+256*6)" ng-switch="isInstruction($index+256*6)">
+                                    <small ng-switch-default>{{ m | number:displayHex }}</small>
+                                    <a ng-switch-when="true" ng-click="jumpToLine($index+256*6)">
+                                        <small>{{ m | number:displayHex }}</small>
+                                    </a>
+                                </div>
+                            </div>
+                            <p></p>
+                            <div class="memory-block"
+                                 ng-repeat="m in memory.data | block: 7 track by $index"
+                                 ng-class="getMemoryCellCss($index+256*7)">
+                                <div ng-class="getMemoryInnerCellCss($index+256*7)" ng-switch="isInstruction($index+256*7)">
+                                    <small ng-switch-default>{{ m | number:displayHex }}</small>
+                                    <a ng-switch-when="true" ng-click="jumpToLine($index+256*7)">
+                                        <small>{{ m | number:displayHex }}</small>
+                                    </a>
+                                </div>
+                            </div>
+                            <p></p>
+                            <div class="memory-block"
+                                 ng-repeat="m in memory.data | block: 8 track by $index"
+                                 ng-class="getMemoryCellCss($index+256*8)">
+                                <div ng-class="getMemoryInnerCellCss($index+256*8)" ng-switch="isInstruction($index+256*8)">
+                                    <small ng-switch-default>{{ m | number:displayHex }}</small>
+                                    <a ng-switch-when="true" ng-click="jumpToLine($index+256*8)">
+                                        <small>{{ m | number:displayHex }}</small>
+                                    </a>
+                                </div>
+                            </div>
+                            <p></p>
+                            <div class="memory-block"
+                                 ng-repeat="m in memory.data | block: 9 track by $index"
+                                 ng-class="getMemoryCellCss($index+256*9)">
+                                <div ng-class="getMemoryInnerCellCss($index+256*9)" ng-switch="isInstruction($index+256*9)">
+                                    <small ng-switch-default>{{ m | number:displayHex }}</small>
+                                    <a ng-switch-when="true" ng-click="jumpToLine($index+256*9)">
+                                        <small>{{ m | number:displayHex }}</small>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <p style="margin-top:5px;">
@@ -148,20 +247,20 @@
                             </tr>
                             <tr ng-repeat="(name, value) in labels" class="codelabel">
                                 <td class="codelabel-name">{{ name }}</td>
-                                <td class="codelabel-line"><a ng-click="jumpToLine(value)">{{ value | number:displayHex }}</a></td>
-                                <td class="codelabel-value">{{ memory.data[value] | number:displayHex }}
+                                <td class="codelabel-line"><a ng-click="jumpToLine(value)">{{256 * labels_ix[name] + value | number:displayHex }}</a></td>
+                                <td class="codelabel-value">
+                                    {{ memory.data[value] | number:displayHex }}
                                     <span ng-if="memory.data[value] >= 32 && memory.data[value] <= 126">
                                         ('{{ getChar(memory.data[value]) }}')
                                     </span>
                                 </td>
-                            </tr>
                         </table>
                     </div>
                 </div>
             </div>
         </div>
         <hr style="margin-top:10px;margin-bottom:10px;"/>
-        <p><small>by Marco Schweighauser (2015) | MIT License | <a href="https://www.mschweighauser.com/make-your-own-assembler-simulator-in-javascript-part1/" target="_blank">Blog</a></small></p>
+        <p><small>Made by Marco Schweighauser (2015) | MIT License | <a href="https://www.mschweighauser.com/make-your-own-assembler-simulator-in-javascript-part1/" target="_blank">Blog</a> | Modified by Kamil Bienek (2021)</small></p>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
     <script src="assets/asmsimulator.js"></script>
